--- a/Project/travle.html
+++ b/Project/travle.html
@@ -5,13 +5,8 @@
     <meta charset="utf-8">
     <title>index</title>
     <link href="css/header.css" rel="stylesheet" type="text/css">
-    <link href="css/body.css" rel="stylesheet" type="text/css">
+    <link href="css/base_body.css" rel="stylesheet" type="text/css">
     <link href="css/footer.css" rel="stylesheet" type="text/css">
-    <link href="css/basic_slider.css" rel="stylesheet" type="text/css">
-    <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="js/basic_slider_jquery.js"></script>
-    <script src="js/basic_slider_js.js"></script>
 </head>
 
 <body>
@@ -46,30 +41,7 @@
     <div id=header_blank>
     </div>
     <div id=body_wrap>
-        <div id="slider">
-            <a href="#" class="control_next">&gt;</a>
-            <a href="#" class="control_prev">&lt;</a>
-            <ul>
-                <li>
-                    <a href=#><img src="img/Main1.png"></a>
-                </li>
-                <li>
-                    <a href=#><img src="img/Main2.png"></a>
-                </li>
-                <li>
-                    <a href=#><img src="img/Main3.png"></a>
-                </li>
-                <li>
-                    <a href=#><img src="img/Main4.png"></a>
-                </li>
-                <li>
-                    <a href=#><img src="img/Main5.png"></a>
-                </li>
-                <li>
-                    <a href=#><img src="img/Main6.png"></a>
-                </li>
-            </ul>
-        </div>
+        <img src="img/travle_info.png">
     </div>
     <div id=footer_wrap>
         <div id=footer>
@@ -112,10 +84,10 @@
                 </ul>
             </div>
             <div id=footer_logo>
-                    <a href=#><img src=img/fo_logo.png></a>
+                <a href=#><img src=img/fo_logo.png></a>
             </div>
         </div>
     </div>
 </body>
-
+    
 </html>
