--- a/Project/LandScape.html
+++ b/Project/LandScape.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>index</title>
     <link href="css/header.css" rel="stylesheet" type="text/css">
+    <link href="css/basebody.css" rel="stylesheet" type="text/css">
     <link href="css/footer.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -26,20 +27,21 @@
         </div>
         <div id=menu>
             <ul>
-                <li><a href=#>LANDSCAPE</a></li>
-                <li><a href=#>ROOMS</a></li>
-                <li><a href=#>FACILITIES</a></li>
-                <li><a href=#>SERVICE</a></li>
-                <li><a href=#>TRAVLE</a></li>
-                <li><a href=#>TARFFIC</a></li>
-                <li><a href=#>RESERVATION</a></li>
-                <li><a href=#>COMMUNITY</a></li>
+                <li><a href="LandScape.html">LANDSCAPE</a></li>
+                <li><a href="rooms.html">ROOMS</a></li>
+                <li><a href="facilities.html">FACILITIES</a></li>
+                <li><a href="service.html">SERVICE</a></li>
+                <li><a href="travle.html">TRAVLE</a></li>
+                <li><a href="traffic.html">TARFFIC</a></li>
+                <li><a href="reservation.html">RESERVATION</a></li>
+                <li><a href="community.html">COMMUNITY</a></li>
             </ul>
         </div>
     </div>
     <div id=header_blank>
     </div>
     <div id=body_wrap>
+        <img src="img/Landscape_info.png">
     </div>
     <div id=footer_wrap>
         <div id=footer>
