--- a/Project/reservation.html
+++ b/Project/reservation.html
@@ -41,7 +41,7 @@
     <div id=header_blank>
     </div>
     <div id=body_wrap>
-        <img src="img/reseve_info.png">
+        <img src="img/reserve_info.png">
     </div>
     <div id=footer_wrap>
         <div id=footer>
