--- a/Project/index.html
+++ b/Project/index.html
@@ -21,12 +21,12 @@
         <div id=logo>
             <table width="1200" height="150" cellpadding="0" cellspacing="0">
                 <tr>
-                    <td width=400px align="left"><a href=#><img src="img/facebook.jpg"></a></td>
+                    <td width=400px align="left"><a href=http://www.facebook.com/arenapension/ target="_blank"><img src="img/facebook.jpg"></a></td>
                     <td width=400px rowspan=2 align="center"><a href=index.html><img src="img/Arena.png"></a></td>
-                    <td width=400px rowspan=2 align="right"><a href=#><img src="img/Reserve.png"></a></td>
+                    <td width=400px rowspan=2 align="right"><a href=reservation.html><img src="img/Reserve.png"></a></td>
                 </tr>
                 <tr>
-                    <td align="left"><a href=#><img src="img/instagram.jpg"></a></td>
+                    <td align="left"><a href=http://www.instagram.com/jhonhur/ target="_blank"><img src="img/instagram.jpg"></a></td>
                 </tr>
             </table>
         </div>
