--- a/Project/rooms.html
+++ b/Project/rooms.html
@@ -44,6 +44,7 @@
         <div id=body_header>
             <img src="img/rooms_info.png">
         </div>
+        <div id=body_blank></div>
     </div>
     <div id=footer_wrap>
         <div id=footer>
