Be completed landscape ver2

--- a/Project/LandScape.html
+++ b/Project/LandScape.html
@@ -6,11 +6,13 @@
     <title>index</title>
     <link href="css/header.css" rel="stylesheet" type="text/css">
     <link href="css/base_body.css" rel="stylesheet" type="text/css">
+    <link href="css/ladnscape_body.css" rel="stylesheet" type="text/css">
     <link href="css/footer.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <div id=header>
+            <div id=header_wrap>
         <div id=top>
         </div>
         <div id=logo>
@@ -25,6 +27,7 @@
                 </tr>
             </table>
         </div>
+            </div>
         <div id=menu>
             <ul>
                 <li><a href="LandScape.html">LANDSCAPE</a></li>
@@ -42,34 +45,29 @@
     </div>
     <div id=body_wrap>
         <div id=body_header>
-            <img src="img/img_edit/Landscape_blank.png">
+            <img src="img/img_edit/landscape_blank.png">
         </div>
-        <div id=body_img>
-            <img src="img/Main3.png">
-            <img src="img/Main1.png">
-            <img src="img/Main2.png">
+        <div id=body_img>            
+            <img src="img/img_edit/landscape01.png">
+            <img src="img/img_edit/landscape02.png">            
+            <img src="img/img_edit/landscape03.png">
             <img src="img/img_edit/Landscape_blank.png">
-            <img src="img/img_edit/Landscape1.png">
+            <img src="img/img_edit/landscape04.png">
             <img src="img/img_edit/Landscape_blank.png">
-            <img src="img/img_edit/Landscape2.png">
+            <img src="img/img_edit/landscape05.png">
             <img src="img/img_edit/Landscape_blank.png">
-            <img src="img/img_edit/Landscape3.png">
+            <img src="img/img_edit/landscape06.png">
             <img src="img/img_edit/Landscape_blank.png">
-            <img src="img/img_edit/Landscape4.png">
+            <img src="img/img_edit/landscape07.png">
             <img src="img/img_edit/Landscape_blank.png">
-            <img src="img/img_edit/Landscape5.png">
+            <img src="img/img_edit/landscape08.png">
             <img src="img/img_edit/Landscape_blank.png">
-            <img src="img/img_edit/Landscape6.png">
+            <img src="img/img_edit/landscape09.png">
             <img src="img/img_edit/Landscape_blank.png">
-            <img src="img/img_edit/Landscape7.png">
+            <img src="img/img_edit/landscape10.png">
             <img src="img/img_edit/Landscape_blank.png">
-            <img src="img/img_edit/Landscape8.png">
-            <img src="img/img_edit/Landscape_blank.png">
-            <img src="img/img_edit/Landscape9.png">
-            <img src="img/img_edit/Landscape_blank.png">
-            <img src="img/img_edit/Landscape10.png">
-            <img src="img/img_edit/Landscape_blank.png">
-            <img src="img/img_edit/Landscape11.png">
+            <img src="img/img_edit/landscape11.png">
+            <img src="img/img_edit/landscape12.png">
         </div>
     </div>
     <div id=footer_wrap>
