--- a/Project/index.html
+++ b/Project/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <div id=header>
+        <div id=header_wrap>
         <div id=top>
         </div>
         <div id=logo>
@@ -30,6 +31,7 @@
                 </tr>
             </table>
         </div>
+    </div>
         <div id=menu>
             <ul>
                 <li><a href="LandScape.html">LANDSCAPE</a></li>
