--- a/Project/rooms.html
+++ b/Project/rooms.html
@@ -11,6 +11,7 @@
 
 <body>
     <div id=header>
+            <div id=header_wrap>
         <div id=top>
         </div>
         <div id=logo>
@@ -25,6 +26,7 @@
                 </tr>
             </table>
         </div>
+            </div>
         <div id=menu>
             <ul>
                 <li><a href="LandScape.html">LANDSCAPE</a></li>
