Be completed rooms ver1

--- a/Project/LandScape.html
+++ b/Project/LandScape.html
@@ -47,7 +47,7 @@
         <div id=body_header>
             <img src="img/img_edit/landscape_blank.png">
         </div>
-        <div id=body_img>            
+        <div id=body_con>            
             <img src="img/img_edit/landscape01.png">
             <img src="img/img_edit/landscape02.png">            
             <img src="img/img_edit/landscape03.png">
