--- a/Project/index.html
+++ b/Project/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>index</title>
     <link href="css/header.css" rel="stylesheet" type="text/css">
-    <link href="css/body.css" rel="stylesheet" type="text/css">
+    <link href="css/main_body.css" rel="stylesheet" type="text/css">
     <link href="css/footer.css" rel="stylesheet" type="text/css">
     <link href="css/basic_slider.css" rel="stylesheet" type="text/css">
     <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
