--- a/Project/rooms.html
+++ b/Project/rooms.html
@@ -6,27 +6,28 @@
     <title>index</title>
     <link href="css/header.css" rel="stylesheet" type="text/css">
     <link href="css/base_body.css" rel="stylesheet" type="text/css">
+    <link href="css/rooms.css" rel="stylesheet" type="text/css">
     <link href="css/footer.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <div id=header>
-            <div id=header_wrap>
-        <div id=top>
-        </div>
-        <div id=logo>
-            <table width="1200" height="150" cellpadding="0" cellspacing="0">
-                <tr>
-                    <td width=400px align="left"><a href=#><img src="img/facebook.jpg"></a></td>
-                    <td width=400px rowspan=2 align="center"><a href=index.html><img src="img/Arena.png"></a></td>
-                    <td width=400px rowspan=2 align="right"><a href=#><img src="img/Reserve.png"></a></td>
-                </tr>
-                <tr>
-                    <td align="left"><a href=#><img src="img/instagram.jpg"></a></td>
-                </tr>
-            </table>
-        </div>
+        <div id=header_wrap>
+            <div id=top>
             </div>
+            <div id=logo>
+                <table width="1200" height="150" cellpadding="0" cellspacing="0">
+                    <tr>
+                        <td width=400px align="left"><a href=#><img src="img/facebook.jpg"></a></td>
+                        <td width=400px rowspan=2 align="center"><a href=index.html><img src="img/Arena.png"></a></td>
+                        <td width=400px rowspan=2 align="right"><a href=#><img src="img/Reserve.png"></a></td>
+                    </tr>
+                    <tr>
+                        <td align="left"><a href=#><img src="img/instagram.jpg"></a></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
         <div id=menu>
             <ul>
                 <li><a href="LandScape.html">LANDSCAPE</a></li>
@@ -43,8 +44,224 @@
     <div id=header_blank>
     </div>
     <div id=body_wrap>
+        <div id=body_blank></div>
         <div id=body_header>
             <img src="img/rooms_info.png">
+        </div>
+        <div id=body_blank></div>
+        <div id=body_con>
+            <div class=rooms_lcon>
+                <a href="index.html">
+                    <!--glpampingcube-->
+                    <div id=glampingcube_img>
+                    </div>
+                </a>
+                <div class=rooms_name>
+                    <a href="index.html">글램핑큐브</a>
+                </div>
+                <div class=rooms_info>
+                    <ul>
+                        <li>유형 : 커플, 가족</li>
+                        <li>타입 : 풀사이드 글램핑, 원룸형(텐트내 화장실+온수 샤워, 씽크대_전기 핫플레이트, 바닥난방, 에어컨)</li>
+                        <li>넓이 : 약52.8㎡ (16평형)</li>
+                        <li>인원 : 기준 - 2명 / 최대 - 4명</li>
+                    </ul>
+                </div>
+            </div>
+            <div class=rooms_mcon>
+                <a href="index.html">
+                    <!--glpamping1-->
+                    <div id=glamping1_img>
+
+                    </div>
+                </a>
+                <div class=rooms_name>
+                    <a href="index.html">글램핑#1</a>
+                </div>
+                <div class=rooms_info>
+                    <ul>
+                        <li>유형 : 커플, 가족</li>
+                        <li>타입 : 풀사이드 글램핑,원룸형(텐트내 화장실+온수 샤워, 씽크대_전기 핫플레이트, 바닥난방, 에어컨)</li>
+                        <li>넓이 : 약49.5㎡ (15평형)</li>
+                        <li>인원 : 기준 - 2명 / 최대 - 4명</li>
+                    </ul>
+                </div>
+            </div>
+            <div class=rooms_rcon>
+                <a href="index.html">
+                    <!--glpampingcube-->
+                    <div id=glamping2_img>
+
+                    </div>
+                </a>
+                <div class=rooms_name>
+                    <a href="index.html">글램핑#2</a>
+                </div>
+                <div class=rooms_info>
+                    <ul>
+                        <li>유형 : 커플, 가족</li>
+                        <li>타입 : 풀사이드 글램핑,원룸형(텐트내 화장실+온수 샤워, 씽크대_전기 핫플레이트, 바닥난방, 에어컨)</li>
+                        <li>넓이 : 약49.5㎡ (15평형)</li>
+                        <li>인원 : 기준 - 2명 / 최대 - 4명</li>
+                    </ul>
+                </div>
+            </div>
+            <div class=rooms_blank></div>
+            <div class=rooms_lcon>
+                <a href="index.html">
+                    <!--glpampingcube-->
+                    <div id=glamping3_img>
+
+                    </div>
+                </a>
+                <div class=rooms_name>
+                    <a href="index.html">글램핑#3</a>
+                </div>
+                <div class=rooms_info>
+                    <ul>
+                        <li>유형 : 커플, 가족</li>
+                        <li>타입 : 풀사이드 글램핑,원룸형(텐트내 화장실+온수 샤워, 씽크대_전기 핫플레이트, 바닥난방, 에어컨)</li>
+                        <li>넓이 : 약49.5㎡ (15평형)</li>
+                        <li>인원 : 기준 - 2명 / 최대 - 4명</li>
+                    </ul>
+                </div>
+            </div>
+            <div class=rooms_mcon>
+                <a href="index.html">
+                    <!--glpampingcube-->
+                    <div id=glamping4_img>
+
+                    </div>
+                </a>
+                <div class=rooms_name>
+                    <a href="index.html">글램핑#4</a>
+                </div>
+                <div class=rooms_info>
+                    <ul>
+                        <li>유형 : 커플, 가족</li>
+                        <li>타입 : 풀사이드 글램핑,원룸형(텐트내 화장실+온수 샤워, 씽크대_전기 핫플레이트, 바닥난방, 에어컨)</li>
+                        <li>넓이 : 약49.5㎡ (15평형)</li>
+                        <li>인원 : 기준 - 2명 / 최대 - 4명</li>
+                    </ul>
+                </div>
+            </div>
+            <div class=rooms_rcon>
+                <a href="index.html">
+                    <!--glpampingcube-->
+                    <div id=room1_img>
+
+                    </div>
+                </a>
+                <div class=rooms_name>
+                    <a href="index.html">자스민(1층)</a>
+                </div>
+                <div class=rooms_info>
+                    <ul>
+                        <li>유형 : 가족, 소규모 워크숍</li>
+                        <li>타입 : 침대방(2), 화장실(2), 거실+주방</li>
+                        <li>넓이 : 약99.0㎡ (30평형)</li>
+                        <li>인원 : 기준 - 4명 / 최대 - 8명</li>
+                    </ul>
+                </div>
+            </div>
+            <div class=rooms_blank></div>
+            <div class=rooms_lcon>
+                <a href="index.html">
+                    <!--glpampingcube-->
+                    <div id=room2_img>
+
+                    </div>
+                </a>
+                <div class=rooms_name>
+                    <a href="index.html">라즈베리(2층)</a>
+                </div>
+                <div class=rooms_info>
+                    <ul>
+                        <li>유형 : 커플, 가족</li>
+                        <li>타입 : 원룸형+개별테라스 바베큐 가능</li>
+                        <li>넓이 : 약39.6㎡ (12평형)</li>
+                        <li>인원 : 기준 - 2명 / 최대 - 3명</li>
+                    </ul>
+                </div>
+            </div>
+            <div class=rooms_mcon>
+                <a href="index.html">
+                    <!--glpampingcube-->
+                    <div id=room3_img>
+
+                    </div>
+                </a>
+                <div class=rooms_name>
+                    <a href="index.html">제노아(3층)</a>
+                </div>
+                <div class=rooms_info>
+                    <ul>
+                        <li>유형 : 커플, 가족</li>
+                        <li>타입 : 원룸형 복층(다락방)</li>
+                        <li>넓이 : 약49.5㎡ (15평형)</li>
+                        <li>인원 : 기준 - 2명 / 최대 - 4명</li>
+                    </ul>
+                </div>
+            </div>
+            <div class=rooms_rcon>
+                <a href="index.html">
+                    <!--glpampingcube-->
+                    <div id=room4_img>
+
+                    </div>
+                </a>
+                <div class=rooms_name>
+                    <a href="index.html">올리브(3층)</a>
+                </div>
+                <div class=rooms_info>
+                    <ul>
+                        <li>유형 : 커플, 가족</li>
+                        <li>타입 : 원룸형 복층(다락방)</li>
+                        <li>넓이 : 약49.5㎡ (15평형)</li>
+                        <li>인원 : 기준 - 2명 / 최대 - 4명</li>
+                    </ul>
+                </div>
+            </div>
+            <div class=rooms_blank></div>
+            <div class=rooms_lcon>
+                <a href="index.html">
+                    <!--glpampingcube-->
+                    <div id=room5_img>
+
+                    </div>
+                </a>
+                <div class=rooms_name>
+                    <a href="index.html">테르니(3층)</a>
+                </div>
+                <div class=rooms_info>
+                    <ul>
+                        <li>유형 : 커플, 가족</li>
+                        <li>타입 : 원룸형</li>
+                        <li>넓이 : 약39.6㎡ (12평형)</li>
+                        <li>인원 : 기준 - 2명 / 최대 - 3명</li>
+                    </ul>
+                </div>
+            </div>
+            <div class=rooms_mcon>
+                <a href="index.html">
+                    <!--glpampingcube-->
+                    <div id=room6_img>
+
+                    </div>
+                </a>
+                <div class=rooms_name>
+                    <a href="index.html">시나몬(3층)</a>
+                </div>
+                <div class=rooms_info>
+                    <ul>
+                        <li>유형 : 커플, 가족</li>
+                        <li>타입 : 원룸형</li>
+                        <li>넓이 : 약39.6㎡ (12평형)</li>
+                        <li>인원 : 기준 - 2명 / 최대 - 3명</li>
+                    </ul>
+                </div>
+            </div>
+            <div class=rooms_blank></div>
         </div>
         <div id=body_blank></div>
     </div>
@@ -89,10 +306,4 @@
                 </ul>
             </div>
             <div id=footer_logo>
-                <a href=#><img src=img/fo_logo.png></a>
-            </div>
-        </div>
-    </div>
-</body>
-    
-</html>
+                <a href=#><img src=img/fo_logo.png> </a> </div> </div> </div> </body> </html>
