--- a/Project/facilities.html
+++ b/Project/facilities.html
@@ -43,7 +43,12 @@
     <div id=header_blank>
     </div>
     <div id=body_wrap>
-        <img src="img/facilities_info.png">
+            <div id=body_blank></div>
+        <div id=body_header>
+            <img src="img/facilities_info.png">
+        </div>
+        <div id=body_blank></div>
+
     </div>
     <div id=footer_wrap>
         <div id=footer>
