--- a/Project/travle.html
+++ b/Project/travle.html
@@ -43,7 +43,11 @@
     <div id=header_blank>
     </div>
     <div id=body_wrap>
-        <img src="img/travle_info.png">
+            <div id=body_blank></div>
+            <div id=body_header>
+                <img src="img/travle_info.png">
+            </div>
+            <div id=body_blank></div>
     </div>
     <div id=footer_wrap>
         <div id=footer>
