will be completed facilities ver1

--- a/Project/facilities3.html
+++ b/Project/facilities3.html
@@ -52,13 +52,13 @@
         <div id=body_con>
             <div id=body_menu>
                 <ul>
-                    <li id=select>야외풀장</li>
+                    <a href=facilities.html>
+                        <li>야외풀장</li>
+                    </a>
                     <a href=facilities2.html>
                         <li>모캄모</li>
                     </a>
-                    <a href=facilities3.html>
-                        <li>잔디정원</li>
-                    </a>
+                    <li id=select>잔디정원</li>
                     <a href=facilities4.html>
                         <li>바베큐장</li>
                     </a>
