--- a/Project/facilities2.html
+++ b/Project/facilities2.html
@@ -52,10 +52,10 @@
         <div id=body_con>
             <div id=body_menu>
                 <ul>
-                    <li id=select>야외풀장</li>
-                    <a href=facilities2.html>
-                        <li>모캄모</li>
+                    <a href=facilities.html>
+                        <li>야외풀장</li>
                     </a>
+                    <li id=select>모캄모</li>
                     <a href=facilities3.html>
                         <li>잔디정원</li>
                     </a>
