--- a/Project/facilities5.html
+++ b/Project/facilities5.html
@@ -52,7 +52,9 @@
         <div id=body_con>
             <div id=body_menu>
                 <ul>
-                    <li id=select>야외풀장</li>
+                    <a href=facilities.html>
+                        <li>야외풀장</li>
+                    </a>
                     <a href=facilities2.html>
                         <li>모캄모</li>
                     </a>
@@ -62,9 +64,7 @@
                     <a href=facilities4.html>
                         <li>바베큐장</li>
                     </a>
-                    <a href=facilities5.html>
-                        <li>텃밭</li>
-                    </a>
+                    <li id=select>텃밭</li></a>
                 </ul>
             </div>
             <img src="img/facilities1_1.png">
