--- a/Project/facilities4.html
+++ b/Project/facilities4.html
@@ -67,14 +67,20 @@
                     </a>
                 </ul>
             </div>
-            <img src="img/facilities1_1.png">
-            <img src="img/facilities1_2.png">
+            <img src="img/facilities4_1.png">
+            <img src="img/facilities4_2.png">
         </div>
         <div id=body_text>
-            해외 휴양지, 바로 그 느낌이 아레나펜션의 느낌입니다.<br>
-            국내에서 즐길 수 있는 이국적 펜션으로 알려진 아레나의 야외풀장과 넓은 데크는 젊은 연인들과 가족들에게 여름휴가를 손꼽아 기다리게 합니다.<br><br>
-            ​깨끗한 130m 지하암반수로 채워진답니다.<br><br>
-            이용시간 : 오전9시~오후8시까지(5월말 개장~9월말 폐장)<br>
+                우천시 와 동절기를 제외한 때에는<br>
+                객실 앞 테라스(글램핑 큐브,#1/#2/#3/#4, 자스민, 라즈베리 객실) <br>
+                또는<br>
+                잔디정원(제노아, 올리브, 시나몬, 테르니 객실)에 마련된 바베큐 시설에서<br>
+                개별바베큐를 즐기 실 수 있습니다.<br><br>
+                또한 비가와도 눈이와도 바베큐를 즐기실 수 있는 실내 바베큐장이 준비되어 있습니다.<br>
+                겨울에는 따뜻한 장작난로가 피워집니다.<br><br>
+                이용시간 : 오후 6시~ 10시 30분 까지<br>
+                ※ 마지막 숯불 제공시간은 PM 8:00입니다.<br><br><br><br>
+                ※ 화재위험으로부터 이용객의 안전을 위하여 개인 화롯대 및 그릴 의 사용을 제한합니다.<br>
         </div>
         <div id=body_blank></div>
     </div>
