--- a/Project/facilities5.html
+++ b/Project/facilities5.html
@@ -67,14 +67,17 @@
                     <li id=select>텃밭</li></a>
                 </ul>
             </div>
-            <img src="img/facilities1_1.png">
-            <img src="img/facilities1_2.png">
+            <img src="img/facilities5_1.png">
+            
         </div>
         <div id=body_text>
-            해외 휴양지, 바로 그 느낌이 아레나펜션의 느낌입니다.<br>
-            국내에서 즐길 수 있는 이국적 펜션으로 알려진 아레나의 야외풀장과 넓은 데크는 젊은 연인들과 가족들에게 여름휴가를 손꼽아 기다리게 합니다.<br><br>
-            ​깨끗한 130m 지하암반수로 채워진답니다.<br><br>
-            이용시간 : 오전9시~오후8시까지(5월말 개장~9월말 폐장)<br>
+            계절 야채가 심어진 무공해 생태텃밭이 가꾸어 집니다.<br>
+            아레나를 방문하신 손님들이 원하시면 자유롭게 따 드실 수 있습니다.<br><br><br>
+            (상황에 따라 제공되지 못할 수도 있습니다.)<br>
+        </div>
+        <div id=body_blank></div>
+        <div id=body_con>
+            <img src="img/facilities5_2.png">
         </div>
         <div id=body_blank></div>
     </div>
