--- a/Project/facilities3.html
+++ b/Project/facilities3.html
@@ -67,14 +67,13 @@
                     </a>
                 </ul>
             </div>
-            <img src="img/facilities1_1.png">
-            <img src="img/facilities1_2.png">
+            <img src="img/facilities3_1.png">
+            <img src="img/facilities3_2.png">
         </div>
         <div id=body_text>
-            해외 휴양지, 바로 그 느낌이 아레나펜션의 느낌입니다.<br>
-            국내에서 즐길 수 있는 이국적 펜션으로 알려진 아레나의 야외풀장과 넓은 데크는 젊은 연인들과 가족들에게 여름휴가를 손꼽아 기다리게 합니다.<br><br>
-            ​깨끗한 130m 지하암반수로 채워진답니다.<br><br>
-            이용시간 : 오전9시~오후8시까지(5월말 개장~9월말 폐장)<br>
+                예쁘게 꾸며지고 관리된 잔디정원을 만나시면,<br>
+                자리를 깔고 정성껏 준비한 피크닉 바구니를 열어 샌드위치를 꺼내 들고<br>
+                사랑하는 사람의 입에 넣어 주고 싶어질지도 모릅니다.<br>
         </div>
         <div id=body_blank></div>
     </div>
