--- a/Project/LandScape.html
+++ b/Project/LandScape.html
@@ -18,26 +18,25 @@
         <div id=logo>
             <table width="1200" height="150" cellpadding="0" cellspacing="0">
                 <tr>
-                    <td width=400px align="left"><a href=#><img src="img/facebook.jpg"></a></td>
-                    <td width=400px rowspan=2 align="center"><a href=index.html><img src="img/Arena.png"></a></td>
-                    <td width=400px rowspan=2 align="right"><a href=#><img src="img/Reserve.png"></a></td>
+                    <td width=400px align="left"><a href=http://www.facebook.com/arenapension/ target="_blank"><img src="img/facebook.jpg"></a></td>
+                    <td width=400px rowspan=2 align="center"><a href=index.html><img src="img/arena.png"></a></td>
+                    <td width=400px rowspan=2 align="right"><a href=reservation.html><img src="img/reserve.png"></a></td>
                 </tr>
                 <tr>
-                    <td align="left"><a href=#><img src="img/instagram.jpg"></a></td>
+                    <td align="left"><a href=http://www.instagram.com/jhonhur/ target="_blank"><img src="img/instagram.jpg"></a></td>
                 </tr>
             </table>
         </div>
             </div>
         <div id=menu>
             <ul>
-                <li><a href="LandScape.html">LANDSCAPE</a></li>
+                <li><a href="landscape.html">LANDSCAPE</a></li>
                 <li><a href="rooms.html">ROOMS</a></li>
                 <li><a href="facilities.html">FACILITIES</a></li>
                 <li><a href="service.html">SERVICE</a></li>
                 <li><a href="travle.html">TRAVLE</a></li>
                 <li><a href="traffic.html">TARFFIC</a></li>
                 <li><a href="reservation.html">RESERVATION</a></li>
-                <li><a href="community.html">COMMUNITY</a></li>
             </ul>
         </div>
     </div>
@@ -47,28 +46,29 @@
         <div id=body_header>
             <img src="img/img_edit/landscape_blank.png">
         </div>
-        <div id=body_con>            
+        <div id=body_header>     
             <img src="img/img_edit/landscape01.png">
             <img src="img/img_edit/landscape02.png">            
             <img src="img/img_edit/landscape03.png">
-            <img src="img/img_edit/Landscape_blank.png">
+            <img src="img/img_edit/landscape_blank.png">
             <img src="img/img_edit/landscape04.png">
-            <img src="img/img_edit/Landscape_blank.png">
+            <img src="img/img_edit/landscape_blank.png">
             <img src="img/img_edit/landscape05.png">
-            <img src="img/img_edit/Landscape_blank.png">
+            <img src="img/img_edit/landscape_blank.png">
             <img src="img/img_edit/landscape06.png">
             <img src="img/img_edit/Landscape_blank.png">
             <img src="img/img_edit/landscape07.png">
-            <img src="img/img_edit/Landscape_blank.png">
+            <img src="img/img_edit/landscape_blank.png">
             <img src="img/img_edit/landscape08.png">
-            <img src="img/img_edit/Landscape_blank.png">
+            <img src="img/img_edit/landscape_blank.png">
             <img src="img/img_edit/landscape09.png">
-            <img src="img/img_edit/Landscape_blank.png">
+            <img src="img/img_edit/landscape_blank.png">
             <img src="img/img_edit/landscape10.png">
-            <img src="img/img_edit/Landscape_blank.png">
+            <img src="img/img_edit/landscape_blank.png">
             <img src="img/img_edit/landscape11.png">
             <img src="img/img_edit/landscape12.png">
         </div>
+        <div id=body_blank></div>
     </div>
     <div id=footer_wrap>
         <div id=footer>
