--- a/Project/service.html
+++ b/Project/service.html
@@ -29,26 +29,25 @@
             <div id=logo>
                 <table width="1200" height="150" cellpadding="0" cellspacing="0">
                     <tr>
-                        <td width=400px align="left"><a href=#><img src="img/facebook.jpg"></a></td>
-                        <td width=400px rowspan=2 align="center"><a href=index.html><img src="img/Arena.png"></a></td>
-                        <td width=400px rowspan=2 align="right"><a href=#><img src="img/Reserve.png"></a></td>
+                        <td width=400px align="left"><a href=http://www.facebook.com/arenapension/ target="_blank"><img src="img/facebook.jpg"></a></td>
+                        <td width=400px rowspan=2 align="center"><a href=index.html><img src="img/arena.png"></a></td>
+                        <td width=400px rowspan=2 align="right"><a href=reservation.html><img src="img/reserve.png"></a></td>
                     </tr>
                     <tr>
-                        <td align="left"><a href=#><img src="img/instagram.jpg"></a></td>
+                        <td align="left"><a href=http://www.instagram.com/jhonhur/ target="_blank"><img src="img/instagram.jpg"></a></td>
                     </tr>
                 </table>
             </div>
         </div>
         <div id=menu>
             <ul>
-                <li><a href="LandScape.html">LANDSCAPE</a></li>
+                <li><a href="landscape.html">LANDSCAPE</a></li>
                 <li><a href="rooms.html">ROOMS</a></li>
                 <li><a href="facilities.html">FACILITIES</a></li>
                 <li><a href="service.html">SERVICE</a></li>
                 <li><a href="travle.html">TRAVLE</a></li>
                 <li><a href="traffic.html">TARFFIC</a></li>
                 <li><a href="reservation.html">RESERVATION</a></li>
-                <li><a href="community.html">COMMUNITY</a></li>
             </ul>
         </div>
     </div>
@@ -60,7 +59,7 @@
             <img src="img/service_info.png">
         </div>
         <div id=body_blank></div>
-        <div id=body_con>
+        <div id=body_header>
             <div id=body_menu>
                 <ul>
                     <a href=150 class=mov><li>바베큐</li></a>
@@ -71,6 +70,7 @@
                 </ul>
             </div>
         </div>
+        <div id=body_con>
         <div class=body_item>
             <div class=body_litem><img src=img/service_1.png></div>
             <div class=body_topitem><img src=img/service_top_1.png></div>
@@ -96,7 +96,9 @@
                 <div class=body_topitem><img src=img/service_top_5.png></div>
                 <div class=body_bottomitem><img src=img/service_bottom_5.png></div>
         </div>
-        <div id=body_blank></div>
+        
+    </div>
+    <div id=body_blank></div>
     </div>
     <div id=footer_wrap>
         <div id=footer>
