--- a/Project/travle5.html
+++ b/Project/travle5.html
@@ -18,26 +18,25 @@
             <div id=logo>
                 <table width="1200" height="150" cellpadding="0" cellspacing="0">
                     <tr>
-                        <td width=400px align="left"><a href=#><img src="img/facebook.jpg"></a></td>
-                        <td width=400px rowspan=2 align="center"><a href=index.html><img src="img/Arena.png"></a></td>
-                        <td width=400px rowspan=2 align="right"><a href=#><img src="img/Reserve.png"></a></td>
+                        <td width=400px align="left"><a href=http://www.facebook.com/arenapension/ target="_blank"><img src="img/facebook.jpg"></a></td>
+                        <td width=400px rowspan=2 align="center"><a href=index.html><img src="img/arena.png"></a></td>
+                        <td width=400px rowspan=2 align="right"><a href=reservation.html><img src="img/reserve.png"></a></td>
                     </tr>
                     <tr>
-                        <td align="left"><a href=#><img src="img/instagram.jpg"></a></td>
+                        <td align="left"><a href=http://www.instagram.com/jhonhur/ target="_blank"><img src="img/instagram.jpg"></a></td>
                     </tr>
                 </table>
             </div>
         </div>
         <div id=menu>
             <ul>
-                <li><a href="LandScape.html">LANDSCAPE</a></li>
+                <li><a href="landscape.html">LANDSCAPE</a></li>
                 <li><a href="rooms.html">ROOMS</a></li>
                 <li><a href="facilities.html">FACILITIES</a></li>
                 <li><a href="service.html">SERVICE</a></li>
                 <li><a href="travle.html">TRAVLE</a></li>
                 <li><a href="traffic.html">TARFFIC</a></li>
                 <li><a href="reservation.html">RESERVATION</a></li>
-                <li><a href="community.html">COMMUNITY</a></li>
             </ul>
         </div>
     </div>
@@ -49,32 +48,29 @@
             <img src="img/travle_info.png">
         </div>
         <div id=body_blank></div>
-        <div id=body_con>
+        <div id=body_header>
             <div id=body_menu>
                 <ul>
-                    <li id=select>야외풀장</li>
+                    <a href=travle.html>
+                        <li>홍천노일강변</li>
+                    </a>
                     <a href=travle2.html>
-                        <li>모캄모</li>
+                        <li>비발디파크</li>
                     </a>
                     <a href=travle3.html>
-                        <li>잔디정원</li>
+                        <li>홍천강꽁꽁축제</li>
                     </a>
                     <a href=travle4.html>
-                        <li>바베큐장</li>
+                        <li>강촌 레일바이크</li>
                     </a>
-                    <a href=travle5.html>
-                        <li>텃밭</li>
+                    <li id=select>남이섬</li>
                     </a>
                 </ul>
             </div>
-            <img src="img/facilities1_1.png">
-            <img src="img/facilities1_2.png">
         </div>
-        <div id=body_text>
-            해외 휴양지, 바로 그 느낌이 아레나펜션의 느낌입니다.<br>
-            국내에서 즐길 수 있는 이국적 펜션으로 알려진 아레나의 야외풀장과 넓은 데크는 젊은 연인들과 가족들에게 여름휴가를 손꼽아 기다리게 합니다.<br><br>
-            ​깨끗한 130m 지하암반수로 채워진답니다.<br><br>
-            이용시간 : 오전9시~오후8시까지(5월말 개장~9월말 폐장)<br>
+            <div id=body_con>
+            <img src="img/travle_5.png">
+            <img src="img/travle_info_5.png">
         </div>
         <div id=body_blank></div>
     </div>
